# Cyber-Club-Bot

./: README.md  flake.nix  pyproject.toml
src/cyber_club_bot/: .env.template  __init__.py  __main__.py  discord_bot.py
