[project]
name = "cyber-club-bot"
version = "0.1.0"
description = "A Discord bot that automates Cybersecurity Club Functions"
authors = [
    {name = "Jerry Arciaga",email = "jerryarciaga11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "discord (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "cyber_club_bot", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
